header and 2 sections

--- a/index.html
+++ b/index.html
@@ -3,8 +3,124 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    <header>
+        <nav>
+            <div class="container">
+                <div class="logo">
+                     <a href="#">Sit <span>on</span> chair</a>
+                 </div>
+                <div class="nav_items">
+                    <ul>
+                        <li><a href="#">O firmie</a></li>
+                        <li><a href="#">Galeria</a></li>
+                        <li><a href="#">Kontakt</a></li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    </header>
+    <section>
+        <div class="container">
+            <a href="#">&lt;</a>
+            <div class="chair">
+                <img src="./images/black_chair.png" alt="black chair">
+            </div>
+            <div class="our_chair">
+                <h1>Sit <span>on</span> our <span>chair</span></h1>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin eget sem suscipit, placerat sem id, facilisis massa.
+                </p>
+                <button class="chair_button">Zobacz więcej</button>
+            </div>
+            <a href="#">&gt;</a>
+        </div>
+    </section>
+    <article>
+        <div class="container">
+            <div class="first_photo">
+                    <div class="first_photo_text">
+                        <p>
+                        Curabitur <span>faucibus</span>
+                        </p>
+                    </div>
+                </div>
+            <div class="second_photo">
+                    <div class="second_photo_text">
+                        <p>
+                        Vestibulum <span>mollis</span>
+                     </p>
+                    </div>
+            </div>
+            <div class="text">
+                <h4>Finds all inputs</h4>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi eu tincidunt sem, ac tincidunt neque.</p>
+                <p>Phasellus lacinia erat nisl, eget blandit felis pulvinar vulputate.</p>
+            </div>
+        </div>
+    </article>
+    <section>
+        <div class="container">
+            <h2>cennik</h2>
+                <div class="price_list">
+                    <div class="plan">
+                        <h3>basic plan</h3>
+                    </div>
+                    <div class=""></div>
+                    <div class="price">
+                        <p>85<sup>99</sup></p>
+                        <p>PLN/MSC</p>
+                    </div>
+                    <div class="delivery">
+                    <div class=""></div>
+                        <ul>
+                            <li>Zakup towaru + dowóz</li>
+                            <li>Serwix</li>
+                     </ul>
+                    </div>
+                     <button>Dołącz</button>
+                </div>
+
+        </div>
+        <div class="price_list">
+            <div class="plan">
+                <h3>standard plan</h3>
+            </div>
+        </div>
+        <div class=""></div>
+        <div class="price">
+            <p>95<sup>99</sup></p>
+            <p>PLN/MSC</p>
+        </div>
+        <div class="delivery">
+            <div class=""></div>
+                 <ul>
+                     <li>Zakup towaru + dowóz</li>
+                     <li>Serwis</li>
+                     <li>Gwarancja 5 lat</li>
+                 </ul>
+        </div>
+        <button>Dołącz</button>
+"
+
+        </div>
+    </section>
+
+
+
+
+
+
+
+
+<section>
+
+</section>
+
+
+
 
 </body>
 </html>
