--- a/index.html
+++ b/index.html
@@ -5,19 +5,33 @@
     <meta charset="UTF-8">
     <title>Sit on chair</title>
     <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/style.css"/>
 
 </head>
 
 <body>
-<header>
+<header class="main-header">
     <div class="container">
-        <div class="logo">sit<span> on </span>chair</div>
-        <nav>
+        <h1 class="main-logo">
+            <a href="#">SIT <span>ON</span> CHAIR</a>
+        </h1>
+
+        <nav class="main-nav">
             <ul>
-                <li><a href="#">O Firmie</a></li>
-                <li><a href="#">Galeria</a></li>
-                <li><a href="#">Kontakt</a></li>
+                <li>
+                    <a href="#">O FIRMIE</a>
+                    <ul class="main-nav-submenu">
+                        <li><a href="">Aktualności</a></li>
+                        <li><a href="">Nasz team</a></li>
+                        <li><a href="">Historia</a></li>
+                    </ul>
+                </li>
+                <li>
+                    <a href="#">GALERIA</a>
+                </li>
+                <li>
+                    <a href="#">KONTAKT</a>
+                </li>
             </ul>
         </nav>
     </div>
@@ -154,6 +168,7 @@
         </div>
     </div>
 </footer>
-</body>
 
+</body>
+<script src="js/app.js" type="text/javascript"></script>
 </html>
