--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         <div class="planType">
             <div class="plan_types"></div>
             <h3>Basic plan</h3>
-            <div class="planType__price">    <!--<div class="container">-->
+            <div class="planType__price">
                 <h5>85<sup>99</sup></h5>
                 <p>PLN/MSC</p>
             </div>
