--- a/index.html
+++ b/index.html
@@ -36,22 +36,35 @@
         </nav>
     </div>
 </header>
-<section class="chair_section">
-    <div class="container">
-        <a class="arrow left" href="#">&lt;</a>
-        <div class="chair_section__image">
-            <img src="images/black_chair.png" alt="black chair">
-        </div>
-        <div class="chair_section__text">
-            <h1>sit&nbsp;<span>on</span>&nbsp;our <span>chair</span></h1>
-            <article class="chair_section__article">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
-                et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.
-            </article>
-            <button type="button">Zobacz więcej</button>
-        </div>
-        <a class="arrow right" href="#">&gt;</a>
+<section id="slider">
+<div class="container">
+    <div class="slider_img">
+        <ul>
+            <li>
+                <img src="images/black_chair.png" alt="black chair">
+            </li>
+            <li>
+                <img src="images/orange.png" alt="black chair">
+            </li>
+            <li>
+                <img src="images/red.png" alt="black chair">
+            </li>
+        </ul>
+        <a href="#" class="slider_prev">&lt;</a>
+        <a href="#" class="slider_next">&gt;</a>
     </div>
+    <div class="slider_aside">
+        <h1>SIT <span>ON</span> OUR <span>CHAIR</span></h1>
+        <p>
+            Irure voluptate et varias veniam, nescius noster aute an irure. Commodo lorem
+            nam eiusmod efflorescere o o duis anim cillum proident, velit in pariatur ubi
+            ipsum, ita non sunt tamen anim. Ullamco quae id consequat arbitrantur qui
+            excepteur ut multos.
+        </p>
+        <a href="#">ZOBACZ WIĘCEJ</a>
+
+    </div>
+</div>
 </section>
 <section class="boxes">
     <div class="container">
